Finish up some renaming from earlier (controller tests should pass now)

--- a/app/views/paths/_form.html.erb
+++ b/app/views/paths/_form.html.erb
@@ -12,24 +12,24 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :startNodeID %><br>
-    <%= f.number_field :startNodeID %>
+    <%= f.label :start_node_id %><br>
+    <%= f.number_field :start_node_id %>
   </div>
   <div class="field">
-    <%= f.label :endNodeID %><br>
-    <%= f.number_field :endNodeID %>
+    <%= f.label :end_node_id %><br>
+    <%= f.number_field :end_node_id %>
   </div>
   <div class="field">
     <%= f.label :state %><br>
     <%= f.text_field :state %>
   </div>
   <div class="field">
-    <%= f.label :startDescription %><br>
-    <%= f.text_field :startDescription %>
+    <%= f.label :start_description %><br>
+    <%= f.text_field :start_description %>
   </div>
   <div class="field">
-    <%= f.label :endDescription %><br>
-    <%= f.text_field :endDescription %>
+    <%= f.label :end_description %><br>
+    <%= f.text_field :end_description %>
   </div>
   <div class="actions">
     <%= f.submit %>
