--- a/app/views/paths/show.html.erb
+++ b/app/views/paths/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Startnodeid:</strong>
-  <%= @path.startNodeID %>
+  <strong>start_node_id:</strong>
+  <%= @path.start_node_id %>
 </p>
 
 <p>
-  <strong>Endnodeid:</strong>
-  <%= @path.endNodeID %>
+  <strong>end_node_id:</strong>
+  <%= @path.end_node_id %>
 </p>
 
 <p>
@@ -16,13 +16,13 @@
 </p>
 
 <p>
-  <strong>Startdescription:</strong>
-  <%= @path.startDescription %>
+  <strong>start_description:</strong>
+  <%= @path.start_description %>
 </p>
 
 <p>
-  <strong>Enddescription:</strong>
-  <%= @path.endDescription %>
+  <strong>end_description:</strong>
+  <%= @path.end_description %>
 </p>
 
 <%= link_to 'Edit', edit_path_path(@path) %> |
