--- a/app/views/nodes/show.html.erb
+++ b/app/views/nodes/show.html.erb
@@ -1,9 +1,18 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>Description:</strongt >
   <%= @node.description %>
 </p>
 
-<%= link_to 'Edit', edit_node_path(@node) %> |
-<%= link_to 'Back', nodes_path %>
+Options:
+<ul>
+  <% @node.exits().each do |path| %>
+    <li>
+      Exit = <%= path.start_description %>
+    </li>
+  <% end %>
+</ul>
+
+<!-- <%= link_to 'Edit', edit_node_path(@node) %> |
+  <%= link_to 'Back', nodes_path %> -->
